1) Section 3 mobile view overflow fixed. 2) Section 4 content align set for mobile and pc.

--- a/public/home.css
+++ b/public/home.css
@@ -285,7 +285,7 @@
   background: #fff;
   .title {
     text-align: center;
-    color: #444A46;
+    color: #444a46;
     font-weight: 300;
   }
   .testimonial {
@@ -303,6 +303,7 @@
 
 @media (max-width: 768px) {
   #s-3 {
+    overflow: hidden;
     .testimonial {
       display: flex;
       gap: 70px;
@@ -324,5 +325,77 @@
   }
   100% {
     transform: translateX(-50%);
+  }
+}
+
+.home{
+
+  #s-4 {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 4vh 5vw;
+    background: #fff;
+  
+    .box-1,
+    .box-2 {
+      width: 50%;
+      padding: 1rem;
+    }
+  
+    .box-1 {
+      display: flex;
+      gap: 20px;
+      .small {
+        align-self: start;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 12px;
+        color: #555;
+        
+        hr {
+          width: 30px;
+          border: none;
+          border-top: 1px solid #ccc;
+        }
+      }
+      
+      h2 {
+        font-size: 38px;
+        font-weight: 500;
+        
+        span {
+          color: #1e60db;
+        }
+      }
+    }
+    
+    .box-2 {
+      align-self: start;
+      font-size: 14px;
+      font-weight: 300;
+      line-height: 1.6;
+      display: flex;
+      align-items: center;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    #s-4 {
+      flex-direction: column;
+      .box-1,
+      .box-2 {
+        width: 100%;
+        padding: 1rem 0;
+      }
+      
+      .box-1{
+        flex-direction: column;
+      }
+  
+      .box-2 {
+        padding-top: 0;
+      }
+    }
   }
 }
